--- a/section_Boosting_Models_label_section__1.tex
+++ b/section_Boosting_Models_label_section__1.tex
@@ -87,7 +87,7 @@ This shows that \ref{equation-adaBoostExponentialIteration2} has a minimum for b
  w_i^{(m+1)} =   w_i^{(m+1)} e^{(\beta_m)} e^{(-y_i h_m(x_i))} \\
  \end{equation} 
  
-Note here that the $\beta$ factor is multiplying all weights equivalently and that $-y_i h_m(x_i) = 2I \big( y_i = h_m(x_i)   \big) -1$. And this is the relevant of the algorithm, where more at each step, importance is given to misclassified samples over correctly classified ones. 
+Note here that the $\beta$ factor is multiplying all weights equivalently and that $-y_i h_m(x_i) = 2I \big( y_i = h_m(x_i)   \big) -1$. And this is the relevant part of the algorithm, where at each step, more importance is given to misclassified samples over correctly classified ones. 
 
 The final form of the model is
 $$  \hat{y}(x) = sgn\big(  \sum_{m=1}^{M} \gamma_m h_m(x) \big)$$ which takes on the most frequent output target given by all of the learners.
