--- a/section_Logistic_Regression_for_Classification__.tex
+++ b/section_Logistic_Regression_for_Classification__.tex
@@ -83,7 +83,7 @@ whilst the second order derivatives take the following form:
 
 
 
-\subsection{Model Regularization and Hyper-parameters}
+\subsection{Model Regularization and Hyper-parameters} \label{subsection-hyperParametersRegularization}
 
 
 \begin{definition}{Model Regularization}
