--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -11,6 +11,14 @@
   year = 2009
 }
 
+@book{bishop - patternRecognition,
+ author = {Bishop, Christopher M.},
+ title = {Pattern Recognition and Machine Learning (Information Science and Statistics)},
+ year = {2006},
+ isbn = {0387310738},
+ publisher = {Springer-Verlag New York, Inc.},
+ address = {Secaucus, NJ, USA},
+} 
 
 @InProceedings{ McKinney-pandas,
   author    = { Wes McKinney },
